fix gap between actions-menu and home illustration

--- a/themes/timtec/static/css/less/admin.less
+++ b/themes/timtec/static/css/less/admin.less
@@ -6,6 +6,17 @@
     overflow: auto; // fix extra margin when you scroll and the actions-menu stick on the top of the page
   }
 
+  // HOME
+  // ********************************************************************* //
+  .home.wrapper-bg {
+      overflow: hidden;
+  }
+  #home {
+    #highlight {
+      margin-top: -52px;
+    }
+  }
+
   // COURSES
   // ********************************************************************* //
   #courses {
